# hide-and-seek-2

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  config.py  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml  pages.yml
docs/: ARCHITECTURE.md  CONTRACT.md  FEATURES_2.0.md
envs/: __init__.py  hide_and_seek.py  physics.py  procedural.py  state.py
examples/: __init__.py  quickstart.py
learn/: __init__.py  export_viewer.py  train.py
models/: __init__.py  actor.py  critic.py  memory.py  networks.py  transformer.py
tests/: __init__.py  test_config.py  test_elo.py  test_env_smoke.py  test_pytree.py  test_visibility.py
trainers/: __init__.py  mappo.py  rollout.py  selfplay.py
utils/: __init__.py  elo.py  logging.py  pytree.py  spaces.py  visibility.py
viz/: README.md  __init__.py  make_demo_trajectory.py  make_learning_data.py  recorder.py  schema.py  serve.py
viz/web/: index.html  learning.js  learning.json  livetrain.js  style.css  trajectory.js  viewer.js
viz/web/trajectories/: chase.json  decoy.json  demo_trajectory.json  doors.json  fort.json  hider.json  manifest.json  ramp.json  seeker.json  showcase.json  untrained.json
