[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hide-and-seek-2"
version = "1.10.0"
description = "A JAX/Flax recreation and expansion of OpenAI's 2019 Emergent Tool Use (Hide-and-Seek) multi-agent RL environment."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Hide & Seek 2.0 contributors" }]
keywords = [
    "reinforcement-learning",
    "multi-agent",
    "jax",
    "flax",
    "mappo",
    "self-play",
    "hide-and-seek",
    "emergent-tool-use",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Runtime dependencies. NOTE: jaxlib here is the CPU build; install a
# CUDA-enabled jaxlib per the JAX install matrix for GPU training.
dependencies = [
    "jax>=0.4.25",
    "jaxlib>=0.4.25",
    "flax>=0.8.0",
    "optax>=0.2.0",
    "distrax>=0.1.5",
    "chex>=0.1.85",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.4.0", "black>=24.0"]
logging = ["wandb>=0.16", "tensorboard>=2.15"]
# Convenience: a CUDA 12 jaxlib. Verify against the JAX install matrix first.
cuda12 = ["jax[cuda12]>=0.4.25"]

[project.urls]
Homepage = "https://github.com/GeFAA/hide-and-seek-2"
Repository = "https://github.com/GeFAA/hide-and-seek-2"
"Live Demo" = "https://gefaa.github.io/hide-and-seek-2/"
Changelog = "https://github.com/GeFAA/hide-and-seek-2/blob/main/CHANGELOG.md"

[project.scripts]
hns2-train = "train:main"

# ---------------------------------------------------------------------------
# Package discovery: the project is a collection of top-level packages rooted
# at the repository root (imports are absolute, e.g. `from envs import ...`).
# ---------------------------------------------------------------------------
[tool.setuptools]
py-modules = ["config", "train"]

[tool.setuptools.packages.find]
where = ["."]
include = ["envs*", "models*", "trainers*", "utils*"]
exclude = ["tests*", "examples*", "docs*"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py310"
src = ["."]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear, NPY numpy.
select = ["E", "W", "F", "I", "UP", "B", "NPY"]
ignore = [
    "E501",  # line length is handled by the formatter
    "B008",  # function calls in argument defaults (common in JAX/Flax APIs)
]

[tool.ruff.lint.isort]
known-first-party = ["config", "envs", "models", "trainers", "utils"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
addopts = "-q --strict-markers"
filterwarnings = ["ignore::DeprecationWarning"]
